--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,41 +8,38 @@
         android:icon="@mipmap/logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-    <activity
-        android:name=".ui.activity.HelloActivity"
-        android:label="@string/app_name"
-        android:screenOrientation="portrait">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-    </activity>
-
-    <activity
-        android:name=".ui.activity.GuidePageActivity"
-        android:screenOrientation="portrait" />
-
-    <activity
-        android:name=".ui.activity.SelectActivity"
-        android:screenOrientation="portrait"/>
-
-    <activity
-        android:name=".ui.activity.LoginStudentActivity"
-        android:screenOrientation="portrait"/>
-
-    <activity
-        android:name=".ui.activity.MainUIActivity"
-        android:screenOrientation="portrait" />
-
         <activity
-            android:name=".ui.activity.TeacherInfoActivity"
-            android:screenOrientation="portrait" />
-
+           android:name=".ui.activity.HelloActivity"
+           android:label="@string/app_name"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".ui.activity.AboutAppActivity"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".ui.activity.CreateInfoActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".ui.activity.FindKeyActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.GuidePageActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.InfoStudentActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.InfoTeacherActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.LoginStudentActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".ui.activity.MainUIActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.MyMessageActivity"
@@ -51,7 +48,19 @@
             android:name=".ui.activity.QuestionFeedbackActivity"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".ui.activity.RegisterActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.SelectActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".ui.activity.ShareAppActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".ui.activity.SystemNoticeActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.TeacherInfoActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.UpdateKeyActivity"
